# python-project-50

./: .Makefile.swp  .README.md.swp  .coverage  .gitignore  .gitignore.swp  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: .pipeline.yml.swp  pipeline.yml
gendiff/: .final_diff.py.swp  .gendifff.swp  __init__.py  diff.py  final_diff.py  parse_args.py
gendiff/parsers/: .plain_parser.py.swp  flat_parser.py  json_parser.py  plain_parser.py
gendiff/scripts/: gendiff.py  gendiff_2.py
logic/: .json_logic.py.swp  __init__.py  diff.py  flat_logic.py  json_logic.py
logic/parsers/: .flat_parser.py.swp  flat_parser.py  json_dump.py
logic/scripts/: .gendiff.py.swp  gendiff.py
tests/: .coverage  .json_test.py.swp  json_test.py  mistakes.txt
tests/fixtures/: .flat_result.swp  .new_logic.py.swp  \  new_logic.py
