[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["evrik163 <evrik163@mail.ru>"]
readme = "README.md"
packages = [
  { include = "logic" },
]

[tool.poetry.dependencies]
python = "^3.8"
asciinema = "^2.2.0"

[tool.poetry.scripts]
gendiff = "logic.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
